--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epic Games Store | Spring Sale</title>
+    <title>Epic Games Store</title>
     <link rel="icon" type="image/x-icon" href="https://static-assets-prod.epicgames.com/epic-store/static/favicon.ico">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -23,57 +23,56 @@
             <button class="download">Download</button>
         </div>
     </header>
-
-    <div class="secondary-nav">
-        <nav class="nav-main">
-            <div class="search-box">
-                <input type="text" class="search-bar" placeholder="Search store">
-            </div>
-            <a href="" class="active">Discover</a>
-            <a href="">Browse</a>
-            <a href="">News</a>
-        </nav>
-    </div>
-
-    <div class="main-content">
-        <div class="spring-sale-content">
-            <div class="spring-sale-banner">
-                <h1>SPRING SALE</h1>
-                <p class="date">MARCH 26 - APRIL 9</p>
-                <p class="description">Blooming deals await! Save up to 75% on your favorite games and grow your library.</p>
-                <button class="save-now">Save Now</button>
-            </div>
-
-          
+    <div class="content">
+        <div class="secondary-nav">
+            <nav class="nav-main">
+                <div class="search-box">
+                    <input type="text" class="search-bar" placeholder="Search store">
+                </div>
+                <a href="" class="active">Discover</a>
+                <a href="">Browse</a>
+                <a href="">News</a>
+            </nav>
         </div>
 
-        <aside class="sidebar">
-            <div class="sidebar-section">
-                <h2>Spring Sale</h2>
-                <ul class="sidebar-list">
-                    <li>
-                        <img src="https://cdn2.unrealengine.com/en-spring-sale-carousel-thumbnail-1200x1600-611bc66a2f95.jpg" alt="">
-                        <span class="game-title">Spring Sale</span>
-                    </li>
-                    <li>
-                        <img src="https://cdn2.unrealengine.com/egs-fortnite-og-s3-carousel-thumb-1200x1600-31bda078d3e9.jpg" alt="">
-                        <span class="game-title">Fortnite OG</span>
-                    </li>
-                    <li>
-                        <img src="https://cdn2.unrealengine.com/egs-genshin-impact-5-5-carousel-thumb-1200x1600-444403e69fba.png" alt="">
-                        <span class="game-title">Genshin Impact</span>
-                    </li>
-                    <li>
-                        <img src="https://cdn2.unrealengine.com/egs-honkai-star-rail-3-1-pt-2-carousel-thumb-1200x1600-3168bf1b85bc.jpg" alt="">
-                        <span class="game-title">Honkai Star Rail</span>
-                    </li>
-                    <li>
-                        <img src="https://cdn2.unrealengine.com/egs-33-immortals-carousel-thumb-v2-1200x1600-55f2dc1cf780.jpg" alt="">
-                        <span class="game-title">33 Immortals</span>
-                    </li>
-                </ul>
+        <div class="main-content">
+            <div class="spring-sale-content">
+                <div class="spring-sale-banner">
+                    <h1>SPRING SALE</h1>
+                    <p class="date">MARCH 26 - APRIL 9</p>
+                    <p class="description">Blooming deals await! Save up to 75% on your favorite games and grow your library.</p>
+                    <button class="save-now">Save Now</button>
+                </div>
             </div>
-        </aside>
+
+            <aside class="sidebar">
+                <div class="sidebar-section">
+                    <h2>Spring Sale</h2>
+                    <ul class="sidebar-list">
+                        <li>
+                            <img src="https://cdn2.unrealengine.com/en-spring-sale-carousel-thumbnail-1200x1600-611bc66a2f95.jpg" alt="">
+                            <span class="game-title">Spring Sale</span>
+                        </li>
+                        <li>
+                            <img src="https://cdn2.unrealengine.com/egs-fortnite-og-s3-carousel-thumb-1200x1600-31bda078d3e9.jpg" alt="">
+                            <span class="game-title">Fortnite OG</span>
+                        </li>
+                        <li>
+                            <img src="https://cdn2.unrealengine.com/egs-genshin-impact-5-5-carousel-thumb-1200x1600-444403e69fba.png" alt="">
+                            <span class="game-title">Genshin Impact</span>
+                        </li>
+                        <li>
+                            <img src="https://cdn2.unrealengine.com/egs-honkai-star-rail-3-1-pt-2-carousel-thumb-1200x1600-3168bf1b85bc.jpg" alt="">
+                            <span class="game-title">Honkai Star Rail</span>
+                        </li>
+                        <li>
+                            <img src="https://cdn2.unrealengine.com/egs-33-immortals-carousel-thumb-v2-1200x1600-55f2dc1cf780.jpg" alt="">
+                            <span class="game-title">33 Immortals</span>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
+        </div>
     </div>
 </body>
 </html>
